2006-10-12  Dan Winship  <danw@novell.com>

	* delayed-dialog.c (gnome_settings_delayed_show_dialog): new
	method to delay showing a dialog until after the window manager is
	running.

	* gnome-settings-font.c (load_cursor): 
	* gnome-settings-keyboard-xkb.c (activation_error): Use it.

2006-08-24  Andre Klapper <a9016009@gmx.de>

	Fixes #170318

	* gnome-settings-multimedia-keys.c (init_kbd): avoid grabbing all
	the keyboard when the key code cannot be retrieved.

2006-07-11  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix distclean build target

2006-07-11  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: clean variables not used

2006-07-06  Sergey Udaltsov <svu@gnome.org>

	Fixing the build process

2006-06-23  Sergey Udaltsov <svu@gnome.org>

	* factory.c, gnome-settings-daemon.c,
	gnome-settings-daemon.h,gnome-settings-daemon.pc.in,
	gnome-settings-dbus.c, gnome-settings-keyboard-xkb.c,
	gnome-settings-keyboard-xkb.h, gsd-infos.xml,
	org.gnome.SettingsDaemon.service.in: g-s-d is now DBUS-enabled,
	implements 2 interfaces - one for gnome-session, another for keyboard
	indication (see gsd-infos.xml)
	Also, major libgswitchit API change.

2006-05-24  Paolo Borelli <pborelli@katamail.com>

	Fixes #342570

	* gnome-settings-multimedia-keys.c (update_kbd_cb, do_eject_action):
	fixed leaked strings returned from gconf_client_get_string.

2006-05-23  Paolo Borelli <pborelli@katamail.com>

	Fixes #342568

	* gnome-settings-sound.c (reload_foreach_cb): fixed leak.

2006-04-28  Joe Marcus Clarke <marcusi@freebsd.org>

	Fixes #338849

	* actions/acme-volume-gstreamer.c: added missing header to avoid
	64bit crash on missing prototype.

2006-04-27  Bastien Nocera  <hadess@hadess.net>

	* actions/Makefile.am:
	* actions/acme-brightness.png:
	* actions/acme-fb-level.c:
	* actions/acme-fb-level.h:
	* actions/acme.h:
	* gnome-settings-multimedia-keys.c: (do_action),
	(acme_filter_events), (gnome_settings_multimedia_keys_load):