@@ -1,3 +1,9 @@
+2007-01-06  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
+
+	Fixes #392276
+
+	* gnome-settings-sound.c: #ifdef esd-related code.
+
 2006-10-12  Dan Winship  <danw@novell.com>
 
 	* delayed-dialog.c (gnome_settings_delayed_show_dialog): new
